# cuflash-attn

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  QWEN.md  README.md  README.zh-CN.md  SUMMARY.md  book.json  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml
.kiro/specs/cuflash-attn/: design.md  requirements.md  tasks.md
.vitepress/: config.js
.vitepress/theme/: index.js
.vitepress/theme/components/: LanguageSwitcher.vue
benchmarks/: bench_flash_attention.cu
changelog/: 2026-03-10_pages-optimization.md
cmake/: cuflash_attnConfig.cmake.in  run_package_smoke.cmake
docs/: algorithm.md  api.md  building.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: style.css
docs/en/: algorithm.md  api-reference.md  index.md
docs/en/design/: design-decisions.md  kernel-deep-dive.md
docs/en/guide/: quick-start.md
docs/en/performance/: benchmarks.md  roofline-analysis.md
docs/en/research/: references.md  related-work.md
docs/zh/: algorithm.md  api-reference.md  index.md
docs/zh/design/: design-decisions.md  kernel-deep-dive.md
docs/zh/guide/: quick-start.md
docs/zh/performance/: benchmarks.md  roofline-analysis.md
docs/zh/research/: references.md  related-work.md
examples/: basic_usage.cu
include/cuflash/: export.h  flash_attention.h  version.h.in
openspec/: config.yaml
scripts/: clean.sh
specs/: index.md
specs/api/: 001-public-api.md
specs/db/: README.md
specs/product/: 001-flash-attention-core.md
specs/rfc/: 001-core-architecture.md
specs/testing/: 001-test-specification.md
src/: cuflash_ctypes_api.cu  flash_attention_api.cu  flash_attention_backward.cu  flash_attention_backward_fp16.cu  flash_attention_forward.cu  flash_attention_fp16.cu  kernel_launch_utils.cuh
src/api/: flash_attention_api.cu
src/backward/: flash_attention_backward.cu  flash_attention_backward_fp16.cu  flash_attention_backward_typed.cu
src/forward/: flash_attention_forward.cu  flash_attention_forward_typed.cu  flash_attention_fp16.cu
src/kernels/: kernel_launch_utils.cuh  workspace_utils.cuh
src/kernels/impl/: online_softmax.cuh  tile_io.cuh
tests/: test_api_smoke.cpp  test_backward.cu  test_dtype.cu  test_error_handling.cu  test_forward.cu  test_main.cpp  test_pytorch_comparison.py
tests/integration/: requirements.txt  test_api_smoke.cpp  test_pytorch_comparison.py
tests/package_smoke/: CMakeLists.txt  main.cpp
tests/unit/: test_backward.cu  test_causal_mask.cu  test_dtype.cu  test_error_handling.cu  test_forward.cu  test_matmul.cu  test_numerical_stability.cu  test_online_softmax.cu  test_stress_edge_cases.cu  test_tile_io.cu
